--- a/Exercise_000.ipynb
+++ b/Exercise_000.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exercise_000.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlsv8iNrDhSvt9H7phyPZH",
+      "authorship_tag": "ABX9TyPrRrRAqKn/4O6z9tVYtujk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "pd.__version__"
+        "print(pd.__version__)"
       ]
     }
   ]
