--- a/Exercise_002.ipynb
+++ b/Exercise_002.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Exercise_002.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKThoztULZP047FY+gC6v0",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMFdcGzddq9K288dqKPezLp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,24 +31,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Using pandas, from the list below:\n",
+        "Using pandas, from the dictionary below:\n",
         "\n",
         "\n",
         "\n",
-        "stocks = ['PLW', 'CDR', '11B', 'TEN']\n",
+        "stocks = {'PLW': 387.00, 'CDR': 339.5, 'TEN': 349.5, '11B': 391.0}\n",
         "\n",
         "\n",
-        "create a Series object and print it to the console."
+        "create a Series object and assign it to the quotations variable. In response, print quotations variable to the console.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Expected result:\n",
+        "\n",
+        "\n",
+        "\n",
+        "PLW    387.0\n",
+        "CDR    339.5\n",
+        "TEN    349.5\n",
+        "11B    391.0\n",
+        "dtype: float64"
       ],
       "metadata": {
-        "id": "v8lGthmg207W"
+        "id": "6LnxrT9R6Q2G"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
-        "id": "m2dglEAO2lZD"
+        "id": "EwIJRNv86Mrq"
       },
       "outputs": [],
       "source": [
@@ -57,13 +70,67 @@
     {
       "cell_type": "code",
       "source": [
-        "stocks = ['PLW', 'CDR', '11B', 'TEN']"
+        "stocks = {'PLW': 387.00, 'CDR': 339.5, 'TEN': 349.5, '11B': 391.0}"
       ],
       "metadata": {
-        "id": "_DGPt-Jl2oEc"
+        "id": "DSKNn7od6Zqh"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# print(pd.Series(stocks.values(), stocks.keys()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "riYzVU256frA",
+        "outputId": "2c56d637-5e57-4c5c-d175-5a03b3b9c2c1"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PLW    387.0\n",
+            "CDR    339.5\n",
+            "TEN    349.5\n",
+            "11B    391.0\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for k,v in stocks.items():\n",
+        "#   print(k, v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WJfCGF4O7JOe",
+        "outputId": "ec524bea-eb9f-43a4-dfa9-4030bbbf945f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PLW 387.0\n",
+            "CDR 339.5\n",
+            "TEN 349.5\n",
+            "11B 391.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -74,20 +141,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dMefipZw2oRb",
-        "outputId": "8576c30a-b40d-4a2d-adc5-d0e49c0215fe"
+        "id": "uXzz-YAW7eD-",
+        "outputId": "2d17a4fa-d624-4258-f322-bd927b37f7bd"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0    PLW\n",
-            "1    CDR\n",
-            "2    11B\n",
-            "3    TEN\n",
-            "dtype: object\n"
+            "PLW    387.0\n",
+            "CDR    339.5\n",
+            "TEN    349.5\n",
+            "11B    391.0\n",
+            "dtype: float64\n"
           ]
         }
       ]
