--- a/Exercise_002.ipynb
+++ b/Exercise_002.ipynb
@@ -6,7 +6,7 @@
       "name": "Exercise_002.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFdcGzddq9K288dqKPezLp",
+      "authorship_tag": "ABX9TyPR+EN48tSXWQtRaNEpK4cm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "EwIJRNv86Mrq"
       },
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "DSKNn7od6Zqh"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "id": "riYzVU256frA",
         "outputId": "2c56d637-5e57-4c5c-d175-5a03b3b9c2c1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "id": "WJfCGF4O7JOe",
         "outputId": "ec524bea-eb9f-43a4-dfa9-4030bbbf945f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,16 +135,19 @@
     {
       "cell_type": "code",
       "source": [
-        "print(pd.Series(stocks))"
+        "# print(pd.Series(stocks))\n",
+        "\n",
+        "quotations = pd.Series(stocks)\n",
+        "print(quotations)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uXzz-YAW7eD-",
-        "outputId": "2d17a4fa-d624-4258-f322-bd927b37f7bd"
+        "outputId": "b454fca6-422e-49cb-b12f-c4a7f70229b1"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
